--- a/src/components/PreviewCard/PreviewCard.module.scss
+++ b/src/components/PreviewCard/PreviewCard.module.scss
@@ -1,9 +1,53 @@
-import React from 'react';
+@import '/src/globalStyles/colors.scss';
 
-export const PreviewCard = () => {
-    return (
-        <div>
+.preview-card{
+  &-inner{
+    max-width: 576px;
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    @media (max-width: 1100px) {
+      margin-bottom: 40px;
+    }
+    @media (max-width: 400px) {
+      height: 400px;
+    }
+  }
+}
 
-        </div>
-    );
-};
+.info{
+
+  &-inner{
+    max-width: 514px;
+    padding: 0 20px;
+    margin-bottom: 30px;
+  }
+
+  &-title{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: $white;
+    margin-bottom: 14px;
+  }
+
+  &-text{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: $gray;
+    margin-bottom: 20px;
+  }
+}
